# hyperliquid-trader-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  hl_client.py  http_guard.py  mcp_server.py
doc/: README_CN.md
