[project]
name = "mcp-hl-trader"
version = "0.1.0"
description = "Hyperliquid trading tools exposed over MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[fastmcp]>=0.1.0",
    "hyperliquid-python-sdk>=0.9.0",
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
